<resources>
    <!-- Main Page -->
    <string name="app_name">FinalProject</string>
    <string name="final_project">Final Project</string>
    <string name="flight">Flight Tracker</string>
    <string name="currency">Currency Converter</string>
    <string name="trivia">Trivia Question</string>
    <string name="bear">Bear Image</string>

    <!-- Flight -->
    <string name="type_here">Type flight here</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search </string>
    <string name="saved_flights">Saved flights</string>
    <string name="main_page">Main Page</string>
    <string name="help">Help </string>
    <string name="about">About</string>
    <string name="goToMainPage">Do you want to go to the main page?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="flightInstruction">Type the flight code, and click Search button to search related information. Click Favorite button to show saved flights.</string>
    <string name="instruction">Instruction:</string>
    <string name="ok">OK</string>
    <string name="failToSearchOnline">Fail to search online</string>
    <string name="destination">Destination</string>
    <string name="terminal">Terminal</string>
    <string name="gate">Gate</string>
    <string name="delay">Delay</string>
    <string name="youSavedFlight">You saved this flight</string>
    <string name="youDeletedFlight">You deleted this flight</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <!-- Bear image -->
    <string name="Choose">Choose image size </string>
    <string name="hint1">Enter width in pixels </string>
    <string name="hint2">Enter height in pixels </string>
    <string name="Generate">Generate Image </string>
    <string name="List">See generated images </string>
    <string name="Width">Width: </string>
    <string name="Height">Height: </string>
    <string name="About">About this program: </string>
    <string name="Instruction">1.Type in your desired width and height.2.Click \'Generate Image\' to generate a bear image.3.Click \'See Generated Images\' to see all generated pictures4.Click each picture to see details.5.Long click each picture to delete. </string>
    <string name="OK">OK </string>
    <string name="GO">Do you want to go to the main page? </string>
    <string name="Yes">Yes </string>
    <string name="Generated">Image generated. </string>

    <!-- Currency converter -->
    <string name="currency_converter">Currency Converter </string>
    <string name="amount_hint">Amount</string>
    <string name="button_convert">Convert</string>
    <string name="button_save">Save</string>
    <string name="button_display">Display</string>
    <string name="button_delete">Delete</string>
    <string name="tv_from">From</string>
    <string name="tv_to">To</string>
    <string name="tv_result" translatable="false"></string>
    <string name="instructionTitle">Instruction</string>
    <string name="instructionMessage">Click convert to convert currency, click save to save history, click display to display history, click display again to refresh after deleting one history.</string>
    <string name="main_page_question">Do you want to go to the main page?</string>
    <string name="delete_message">Do you want to delete the history?</string>
    <string name="delete_question">Question:</string>
    <string name="delete_YES">Yes</string>
    <string name="delete_NO">No</string>
    <string name="delete_after">You deleted the history</string>
    <string name="delete_undo">Undo</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="menu_YES">Yes</string>

    <!-- Trivia -->
    <string name="trivia_choose_a_topic">Choose a topic</string>
    <string name="geography">Geography</string>
    <string name="sport">Sport</string>
    <string name="mythology">Mythology</string>
    <string name="science">Science</string>
    <string name="cartoon_and_animation">Cartoon and Animation</string>
    <string name="vehicles">Vehicles</string>
    <string name="video_game">Video Game</string>
    <string name="animals">Animals</string>
    <string name="trivia_next_page">Next</string>
    <string name="trivia_menu_title">Trivia Question</string>
    <string name="trivia_alert_title">About this program: </string>
    <string name="trivia_alert_des">Choose a topic you want to ask about.
        Enter the number of questions you have.
        Click "Next" to move to the next page and begin answering the questions.
        Select "Rank" to view the top ten scores on the leaderboard.
        Choose "Submit" to submit your score.
        Click "Try Again" to start the mini-quiz again.</string>
    <string name="trivia_snackbar">Do you want to go to the main page?</string>
    <string name="trivia_positive">Yes</string>
    <string name="trivia_dismiss">dismiss</string>
    <string name="trivia_username">Username:</string>
    <string name="trivia_usernameDes">Please input your username.</string>
    <string name="trivia_rankPage">Rank</string>
    <string name="trivia_submit">Submit</string>
    <string name="trivia_tryAgain">Try Again</string>
    <string name="trivia_yourRank">Your rank is </string>
    <string name="trivia_deleteTitle">Question: </string>
    <string name="trivia_deleteMessage">Do you want to delete this record?</string>
    <string name="trivia_negative">No</string>
    <string name="trivia_no_selected">You need to select an item.</string>
    <string name="trivia_questionNumber">"You need to input the number of question, and it need to be no larger than 50."</string>
    <string name="trivia_questionNumber_topic">"You need to input the number of question and choose a topic."</string>
</resources>