<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/destination"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/terminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/terminal"
        app:layout_constraintStart_toStartOf="@+id/destination"
        app:layout_constraintTop_toBottomOf="@+id/destination" />

    <TextView
        android:id="@+id/gate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gate"
        app:layout_constraintStart_toStartOf="@+id/terminal"
        app:layout_constraintTop_toBottomOf="@+id/terminal" />

    <TextView
        android:id="@+id/delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delay"
        app:layout_constraintStart_toStartOf="@+id/gate"
        app:layout_constraintTop_toBottomOf="@+id/gate" />

    <Button
        android:id="@+id/deleteFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delay" />


</androidx.constraintlayout.widget.ConstraintLayout>